Final Project Fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Tesla Clone</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -70,19 +71,18 @@
             <span class="button">READ MORE</span>
           </a>
         </div>
-
-        <div id="footer">
-          <div id="footer-links">
-            <a class="footer-link" href="#">Tesla Motors &copy; 2016</a>
-            <a class="footer-link" href="#">Privacy & Legal</a>
-            <a class="footer-link" href="#">Contact</a>
-            <a class="footer-link" href="#">Careers</a>
-            <a class="footer-link" href="#">Forums</a>
-            <a class="footer-link" href="#">Locations</a>
-            <a class="footer-link" href="#">
-              <img src="img/flag.gif" id="flag" alt="US Flag" />
-            </a>
-          </div>
+      </div>
+      <div id="footer">
+        <div id="footer-links">
+          <a class="footer-link" href="#">Tesla Motors &copy; 2016</a>
+          <a class="footer-link" href="#">Privacy & Legal</a>
+          <a class="footer-link" href="#">Contact</a>
+          <a class="footer-link" href="#">Careers</a>
+          <a class="footer-link" href="#">Forums</a>
+          <a class="footer-link" href="#">Locations</a>
+          <a class="footer-link" href="#">
+            <img src="img/flag.gif" id="flag" alt="US Flag" />
+          </a>
         </div>
       </div>
     </div>
